# solvro-ml

./: README.md  dependencies.txt  environment.yaml  main.py  pyproject.toml  solvro.ipynb
data/: clustered_data.csv  scaled.csv
notebooks/: clustering.ipynb  eda.ipynb  evaluation.ipynb  preprocessing.ipynb
src/: clustering.py  evaluate.py  evaluation.py  features.py  preprocessing.py  visualization.py
